--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>My Github</title>
+        <title>Media Collectives</title>
+        <link rel="stylesheet" href="style.css">
     </head>
+
     <body>
+        <header class="header">               
+            <ul class="headtext">
+                <li><b><a href="">Home</a></b></li>
+                <li><b><a href="">About me</a></b></li>
+                <li><b><a href="">Contact</a></b></li>
+            </ul>
+        </header>
+        <div class="bimage">
+            <p class="p1"><b>Welcome to <br> Media Creatives</b></p>
+        </div>
         
+
+       
     </body>
+
+    <footer>Footer</footer>
+
 </html>
