--- a/MediaCreatives.html
+++ b/MediaCreatives.html
@@ -18,7 +18,7 @@
         </header>
         <div class="bimage">
             <p class="p1"><b><br>Welcome to<br>Media Creatives</b></p><br><br>
-            <p class="p2">Your personal photographer</p><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <p class="p2">Your personal photographer</p><br><br><br><br><br><br><br><br><br><br><br>
             <p class="p3">-Picture design-</p><br><br>
             <img src="wedding1.webp" alt="wedding" height="250px" class="pic1">
         </div>
